syntax = "proto3";
package carto;

enum IndexScheme {
    H3 = 0;
    Quadbin = 1;
}

message Ints {
    repeated uint32 value = 1;
}

message NumericProp {
    repeated double value = 1;
}

message KeyValueObject {
    string key = 1;
    string value = 2;
}

message Properties {
    repeated KeyValueObject data = 1;
}

message Cells  {
    Ints indices = 1 ;
    repeated Properties properties = 2;
    map<string, NumericProp> numericProps = 3;
}

message Tile {
    IndexScheme scheme = 1;
    Cells cells = 2;
}
